--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Command Line Jiu Jitsu
+description: Influenced by Command Line Kung Fu, tailored for Data Scientists and anyone new to bash.
